Build [!] - переход на 11 джаву ради maven сборки, pom.xml